# eval_trace

./: .env.example  .gitignore  PLAN_Agent_eval.md  README.md  START.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: eval_gate.yml  pr-review.yml
agent_eval/: __init__.py  config.py
agent_eval/adapters/: bedrock.py  generic.py  langchain.py
agent_eval/core/: bedrock.py  db.py  schema.py  tracer.py
agent_eval/dataset/: labeller.py  store.py  versioning.py
agent_eval/evals/: judge.py  runner.py
agent_eval/evals/layer1/: intent_correctness.py  reasoning_quality.py  tool_selection.py
agent_eval/evals/layer2/: param_schema_check.py  param_value_check.py  result_interpretation.py
agent_eval/evals/layer3/: efficiency.py  hallucination.py  task_success.py  trajectory_judge.py
agent_eval/scoring/: gate.py  history.py
agent_eval/server/: app.py
agent_eval/server/static/: index.html
data/: dataset.db  scores.db  traces.db  traces.jsonl
tasks/: task_001.json  task_002.json  task_003.json  task_004.json  task_005.json  task_006.json  task_007.json  task_008.json  task_009.json  task_010.json
test_agent/: agent.py
test_agent/system_diagnosis_mcp/: __init__.py  granular_diagnostic_tools.py
